Added Favicons and Minor Changes

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <meta charset="utf-8">
 <title>Steve's Site</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">  
-<link rel="stylesheet" href="/css/bootstrap.min.css">
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
+<link rel="stylesheet" type="text/css" href="/css/style.css">
 <script src="/js/jquery-3.3.1.slim.min.js"></script>
 <script src="/js/script.js"></script>
+<link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
 </head>
-
 <body>
 <header>
   <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
@@ -41,7 +43,8 @@
       <div class="card-body">
         <h5 class="card-title">HTML-Minecraft</h5>
         <p class="card-text">A HTML recreation of the Minecraft Start Screen</p>
-        <a href="https://codepen.io/SteveTech/pen/bzzoPG" class="btn btn-primary">View</a>
+        <a href="https://steve-tech.github.io/HTML-Minecraft/" class="btn btn-primary" role="button">View Site</a>
+        <a href="https://steve-tech.github.io/HTML-Minecraft/docs" class="btn btn-secondary" role="button">View Docs</a>
       </div>
     </div>
   </section>
