--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <meta charset="utf-8">
 <title>Steve's Site</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<script src="js/jquery-3.3.1.slim.min.js"></script>
-<script src="js/script.js"></script>
-<link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32" />
-<link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha512-rO2SXEKBSICa/AfyhEK5ZqWFCOok1rcgPYfGOqtX35OyiraBg6Xa4NnBJwXgpIRoXeWjcAmcQniMhp22htDc6g==" crossorigin="anonymous" />
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" />
+<link rel="stylesheet" type="text/css" href="css/style.css" />
+<link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
+<link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
 </head>
 <body>
 <header>
@@ -18,51 +17,119 @@
     <div class="container"> <a class="navbar-brand" href="#">Steve's Site</a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item"><a class="nav-link" href="#welcome-section">Welcome</a></li>
-          <li class="nav-item"><a class="nav-link" href="#web-projects">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="#welcome">Welcome</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="#certificates">Certificates</a></li>
+          <li class="nav-item"><a class="nav-link" href="#stats">Stats</a></li>
         </ul>
       </div>
     </div>
   </nav>
 </header>
 <main>
-  <section id="welcome-section">
-    <h1>Steve's Site</h1>
-    <hr>
-    <p>Hi I'm Steve, Welcome to my website I'm a student learning web design in school.</p>
+  <section id="welcome">
+    <h3>Hi, I'm Steve</h3>
+    <h2>I'm a Student Programmer and Musician.</h2>
+    <ul class="list-unstyled">
+      <li>I’m currently completing a Cert III in Music Technology.</li>
+      <li>I've built my own PC (Ryzen 5 2600, GTX 1660 SUPER, 32GB@3200MHz)</li>
+      <li>I have achieved a High Distinction in the Advanced NCSS Challange Championship 2019</li>
+      <li>I play Cello (Honours in AMEB Grade 3), Piano and I have achieved a High Distinction in AMEB Grade 2 Music Theory</li>
+    </ul>
   </section>
-  <section id="web-projects">
+  <section id="projects">
     <header class="orange-bar">
-      <h4>View my web projects below...</h4>
+      <h4>View some of my projects below...</h4>
     </header>
     <div class="card project-tile">
-      <iframe src="https://steve-tech.github.io/HTML-Minecraft/" class="card-img-top"></iframe>
+      <div class="frame-container card-img-top">
+        <iframe src="https://steve-tech.github.io/HTML-Minecraft/"></iframe>
+      </div>
       <div class="card-body">
         <h5 class="card-title">HTML-Minecraft</h5>
         <p class="card-text">A HTML recreation of the Minecraft Start Screen</p>
-        <a href="https://steve-tech.github.io/HTML-Minecraft/" class="btn btn-primary" role="button">View Site</a> <a href="https://steve-tech.github.io/HTML-Minecraft/docs" class="btn btn-secondary" role="button">View Docs</a> </div>
+        <a href="https://github.com/Steve-Tech/HTML-Minecraft" class="btn btn-primary" role="button">View Code</a> <a href="https://steve-tech.github.io/HTML-Minecraft/" class="btn btn-secondary" role="button">View Site</a> </div>
+    </div>
+    <div class="card project-tile">
+      <div class="frame-container card-img-top">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/laD6pSP1EGY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">JaycarAssistant</h5>
+        <p class="card-text">An assistant for locating components at Jaycar</p>
+        <a href="https://github.com/Steve-Tech/JaycarAssistant" class="btn btn-primary" role="button">View Code</a>
+	  </div>
+    </div>
+    <div class="card project-tile">
+      <!--<div class="frame-container">
+          <video controls class="frame">
+            <source src="https://v.redd.it/vfp9pbstqkt41/DASH_480?source=fallback" type="video/mp4">
+          </video>
+      </div>-->
+      <div class="card-body">
+        <h5 class="card-title">MCeddit</h5>
+        <p class="card-text">A Simple way to link Minecraft with Reddit</p>
+        <a href="https://github.com/Steve-Tech/MCeddit" class="btn btn-primary" role="button">View Code</a>
+	  </div>
+    </div>
+    <div class="card project-tile">
+      <div class="card-body">
+        <h5 class="card-title">DynamicDNS for Spigot</h5>
+        <p class="card-text">A dynamic DNS plugin for Spigot</p>
+        <a href="https://github.com/Steve-Tech/DynamicDNS-Spigot" class="btn btn-primary" role="button">View Code</a>
+	  </div>
     </div>
   </section>
-  <section id="more-projects">
-    <header class="orange-bar">
-      <h4>For more projects visit my <a href="https://github.com/Steve-Tech" target="_blank">GitHub</a> </h4>
+  <section id="certificates" class="orange-bar">
+    <header>
+      <h4>Some Certificates I've acquired...</h4>
     </header>
+    <div class="card project-tile">
+      <div class="frame-container card-img-top">
+        <iframe src="certificates/freecodecamp/responsive-web-design.html"></iframe>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Responsive Web Design</h5>
+        <p class="card-text">from freeCodeCamp.org</p>
+        <a href="https://www.freecodecamp.org/steve-tech" class="btn btn-primary" role="button">View Profile</a> <a href="https://www.freecodecamp.org/certification/steve-tech/responsive-web-design" class="btn btn-secondary" role="button">View Certificate</a> </div>
+    </div>
+    <div class="card project-tile">
+      <div class="frame-container card-img-top text-center">
+        <img alt="Folding@home Certificate" src="https://apps.foldingathome.org/awards?user=806172" class="frame frame-img mx-auto"/>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Folding@home</h5>
+        <p class="card-text">Distributed Computing</p>
+        <a href="https://stats.foldingathome.org/donor/Stephen_Horvath" class="btn btn-primary" role="button">View Profile</a></div>
+    </div>
   </section>
-  <footer id="footer" class="jumbotron jumbotron-fluid">A website made by <a id="profile-link" href="https://github.com/Steve-Tech" target="_blank">Steve</a>.<br>
-    <section class="social-icons"> <a href="https://github.com/Steve-Tech" target="_blank">
-      <svg id="GitHub_logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
-        <path fill="currentColor" d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path>
-      </svg>
-      </a> <a href="https://www.freecodecamp.org/steve-tech" target="_blank">
-      <svg id="freeCodeCamp_logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-        <path fill="currentColor" d="M23.967 12.317c0 2.5-.854 4.718-2.598 6.681-.635.729-1.143 1.076-1.488 1.076-.121 0-.256-.033-.346-.125-.092-.096-.15-.223-.15-.35 0-.188.225-.475.674-.889 1.814-1.736 2.727-3.895 2.727-6.456 0-2.846-.943-5.152-2.816-6.936-.374-.342-.57-.627-.57-.852 0-.12.061-.256.164-.345.105-.09.225-.149.346-.149.418 0 1.049.509 1.842 1.527C23.25 7.402 24 9.694 24 12.345l-.033-.028zM0 11.682c0-2.499.854-4.719 2.598-6.681.635-.729 1.143-1.076 1.49-1.076.119 0 .254.033.344.125.09.095.15.189.15.314 0 .188-.225.477-.674.918-1.781 1.744-2.711 3.895-2.711 6.462 0 2.847.951 5.158 2.821 6.935.38.344.569.633.569.854 0 .127-.061.256-.16.348-.099.094-.225.16-.352.16-.436 0-1.033-.51-1.828-1.518C.734 16.654 0 14.373 0 11.682zm17.699 6.869H6.715c-.35 0-.668-.287-.668-.666 0-.383.285-.668.668-.668h10.984c.348 0 .668.285.668.668-.006.385-.287.666-.668.666zm-6-8.919c.197-.025.344.615.361.749.046.353-.071.693-.231 1.003-.597 1.165-1.978 2.104-1.612 3.575.166.635.494 1.076 1.514 1.619-.345.119-.824-.111-1.094-.301-1.199-.816-1.963-2.156-1.888-3.619.03-.464.12-.92.239-1.368.375-1.281 1.139-2.401 1.588-3.647.225-.599.39-1.324.211-1.953-.09-.309-.255-.599-.465-.849-.061-.076-.404-.465-.539-.42.6-.225 1.139-.016 1.662.299.404.24.72.585.959.975.449.719.629 1.542.719 2.381.031.345-.015 1.184.39 1.35.419.179.749-.525.839-.81.195-.645-.06-1.259-.314-1.858.061.121.285.255.389.346l.36.344c.435.449.704 1.004.884 1.604.164.539.24 1.093.27 1.633.074 1.123-.18 2.278-.629 3.311-.195.463-.449.898-.779 1.273-.319.373-.748.613-1.093.957.808-.809 1.238-2.127 1.123-3.131-.06-.553-.239-1.063-.659-1.572 0 0 .045.358.087.583.075.495-.255 1.02-.644.959-.285-.029-.136-.643-.105-.838.105-.584-.03-1.154-.244-1.693-.209-.509-.6-.914-1.198-.823l-.101-.079z"/>
-      </svg>
-      </a> <a href="https://twitter.com/Steve8Tech" target="_blank">
-      <svg id="Twitter_logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-        <path fill="currentColor" d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"></path>
-      </svg>
-      </a> </section>
-  </footer>
+  <section id="stats">
+    <header class="orange-bar">
+      <h4>Statistics on some things...</h4>
+    </header>
+    <div class="card project-tile">
+      <div class="frame-container card-img-top">
+        <img align="left" alt="Steve-Tech's Github Stats" src="https://github-readme-stats.vercel.app/api?username=Steve-Tech&show_icons=true&theme=gruvbox"  class="frame frame-img mx-auto"/>
+      </div>
+    </div>
+  </section>
 </main>
+<footer id="footer" class="jumbotron jumbotron-fluid">A website made by <a id="profile-link" href="https://github.com/Steve-Tech" target="_blank">Steve</a>.<br>
+  <section class="social-icons"> <a href="https://github.com/Steve-Tech" target="_blank">
+    <svg id="GitHub_logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512">
+      <path fill="currentColor" d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path>
+    </svg>
+    </a> <a href="https://www.freecodecamp.org/steve-tech" target="_blank">
+    <svg id="freeCodeCamp_logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+      <path fill="currentColor" d="M23.967 12.317c0 2.5-.854 4.718-2.598 6.681-.635.729-1.143 1.076-1.488 1.076-.121 0-.256-.033-.346-.125-.092-.096-.15-.223-.15-.35 0-.188.225-.475.674-.889 1.814-1.736 2.727-3.895 2.727-6.456 0-2.846-.943-5.152-2.816-6.936-.374-.342-.57-.627-.57-.852 0-.12.061-.256.164-.345.105-.09.225-.149.346-.149.418 0 1.049.509 1.842 1.527C23.25 7.402 24 9.694 24 12.345l-.033-.028zM0 11.682c0-2.499.854-4.719 2.598-6.681.635-.729 1.143-1.076 1.49-1.076.119 0 .254.033.344.125.09.095.15.189.15.314 0 .188-.225.477-.674.918-1.781 1.744-2.711 3.895-2.711 6.462 0 2.847.951 5.158 2.821 6.935.38.344.569.633.569.854 0 .127-.061.256-.16.348-.099.094-.225.16-.352.16-.436 0-1.033-.51-1.828-1.518C.734 16.654 0 14.373 0 11.682zm17.699 6.869H6.715c-.35 0-.668-.287-.668-.666 0-.383.285-.668.668-.668h10.984c.348 0 .668.285.668.668-.006.385-.287.666-.668.666zm-6-8.919c.197-.025.344.615.361.749.046.353-.071.693-.231 1.003-.597 1.165-1.978 2.104-1.612 3.575.166.635.494 1.076 1.514 1.619-.345.119-.824-.111-1.094-.301-1.199-.816-1.963-2.156-1.888-3.619.03-.464.12-.92.239-1.368.375-1.281 1.139-2.401 1.588-3.647.225-.599.39-1.324.211-1.953-.09-.309-.255-.599-.465-.849-.061-.076-.404-.465-.539-.42.6-.225 1.139-.016 1.662.299.404.24.72.585.959.975.449.719.629 1.542.719 2.381.031.345-.015 1.184.39 1.35.419.179.749-.525.839-.81.195-.645-.06-1.259-.314-1.858.061.121.285.255.389.346l.36.344c.435.449.704 1.004.884 1.604.164.539.24 1.093.27 1.633.074 1.123-.18 2.278-.629 3.311-.195.463-.449.898-.779 1.273-.319.373-.748.613-1.093.957.808-.809 1.238-2.127 1.123-3.131-.06-.553-.239-1.063-.659-1.572 0 0 .045.358.087.583.075.495-.255 1.02-.644.959-.285-.029-.136-.643-.105-.838.105-.584-.03-1.154-.244-1.693-.209-.509-.6-.914-1.198-.823l-.101-.079z"/>
+    </svg>
+    </a> <a href="https://twitter.com/Steve8Tech" target="_blank">
+    <svg id="Twitter_logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+      <path fill="currentColor" d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"></path>
+    </svg>
+    </a> </section>
+</footer>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js" integrity="sha512-/DXTXr6nQodMUiq+IUJYCt2PPOUjrHJ9wFrqpJ3XkgPNOZVfMok7cRw6CSxyCQxXn6ozlESsSh1/sMCTF1rL/g==" crossorigin="anonymous"></script> 
+<script src="js/script.js"></script>
 </body>
 </html>
