Fixed Mixed Content on HTML-Minecraft

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
     </header>
     <div class="card project-tile">
       <div class="frame-container card-img-top">
-        <iframe src="https://steve-tech.github.io/HTML-Minecraft/"></iframe>
+        <iframe src="https://stevetech.me/HTML-Minecraft/"></iframe>
       </div>
       <div class="card-body">
         <h5 class="card-title">HTML-Minecraft</h5>
         <p class="card-text">A HTML recreation of the Minecraft Start Screen</p>
-        <a href="https://github.com/Steve-Tech/HTML-Minecraft" class="btn btn-primary" role="button">View Code</a> <a href="https://steve-tech.github.io/HTML-Minecraft/" class="btn btn-secondary" role="button">View Site</a> </div>
+        <a href="https://github.com/Steve-Tech/HTML-Minecraft" class="btn btn-primary" role="button">View Code</a> <a href="https://stevetech.me/HTML-Minecraft/" class="btn btn-secondary" role="button">View Site</a> </div>
     </div>
     <div class="card project-tile">
       <div class="frame-container card-img-top">
