Update Cello Grades

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 <main>
   <section id="welcome">
     <h3>Hi, I'm Steve</h3>
-    <h2>I'm a Student Programmer and Musician.</h2>
+    <h2>I'm a Student, Programmer and Musician.</h2>
     <ul class="list-unstyled">
       <li>I’m currently completing a Cert III in Music Technology.</li>
       <li>I've built my own PC (Ryzen 5 2600, GTX 1660 SUPER, 32GB@3200MHz)</li>
       <li>I have achieved a High Distinction in the Advanced NCSS Challange Championship 2019</li>
-      <li>I play Cello (Honours in AMEB Grade 3), Piano and I have achieved a High Distinction in AMEB Grade 2 Music Theory</li>
+      <li>I play Cello (Honours in AMEB Grade 1, 2 & 3 and Credit in Grade 4), Piano and I have achieved a High Distinction in AMEB Grade 1 & 2 Music Theory</li>
     </ul>
   </section>
   <section id="projects">
